Remove getStudents() API