@@ -19,3 +19,10 @@ dependencies {
 
     testImplementation "io.mockk:mockk-jvm:1.13.4"
 }
+
+tasks.withType(Test) {
+    /**
+     * fix for retrofit https://github.com/square/retrofit/issues/3341
+     */
+    jvmArgs = ["--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
+}
